--- a/lambregs.tex
+++ b/lambregs.tex
@@ -14,22 +14,8 @@
 
 \begin{document}
 %	\setcounter{tocdepth}{2}
-    \xmtitle{Veeltermen}{}  
+    \xmtitle{Natuurkunde}{}  
  
-
-
-\part{Basisbegrippen}
-
-
-\activitychapter{veeltermen/vltrm_h1_eentermen.tex}
-\activitychapter{veeltermen/vltrm_h1_veeltermen.tex}
-\activitychapter{veeltermen/vltrm_h1_parameters.tex}
-\activitychapter{veeltermen/vltrm_h1_basisbewerkingen.tex}
-\activitychapter{veeltermen/vltrm_h1_nuldelers.tex}
-
-\activitysection{veeltermen/vltrm_h1_zoef_reeks1.tex}
-\activitysection{veeltermen/vltrm_h1_zoef_reeks2.tex}
-\activitysection{veeltermen/vltrm_h1_zoef_reeks3.tex}
 
 
 
@@ -47,10 +33,10 @@
 \part{Tweedimensionale bewegingen}
 
 
-\activitychapter{lambregs_ximera/knmtx_2dim_onafhankelijkheidsbeginsel.tex}
-\activitychapter{lambregs_ximera/knmtx_2dim_begrippen.tex}
-\activitychapter{lambregs_ximera/knmtx_2dim_eenpariga_cirkelbeweging.tex}
-\activitychapter{lambregs_ximera/knmtx_2dim_horizontale_worp.tex}
+\activitychapter{lambregs_ximera/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
+\activitychapter{lambregs_ximera/knmtc_2dim_begrippen.tex}
+\activitychapter{lambregs_ximera/knmtc_2dim_eenparige_cirkelbeweging.tex}
+\activitychapter{lambregs_ximera/knmtc_2dim_horizontale_worp.tex}
 
 
 \part{De beginselen van Newton}
@@ -80,7 +66,7 @@
 \activitychapter{lambregs_ximera/ae_pot_gravitationele.tex}
 \activitychapter{lambregs_ximera/ae_pot_gravitationele_algemeen.tex}
 \activitychapter{lambregs_ximera/ae_pot_referentiepunt.tex}
-\activitychapter{lambregs_ximera/ae_pot_potentiële_energie.tex}
+\activitychapter{lambregs_ximera/ae_pot_potentiele_energie.tex}
 \activitychapter{lambregs_ximera/ae_behoud.tex}
 
 
