xmsource + voetnoten in voetnoten in commentaar

--- a/lambregs.tex
+++ b/lambregs.tex
@@ -5,7 +5,7 @@
 \addPrintStyle{.}
 
 \pdfOnly{
-    \renewcommand{\xmcursusnaam}{{\textsc{Veeltermen}}}
+    \renewcommand{\xmcursusnaam}{{\textsc{Natuurkunde}}}
 }
 
 
