--- a/lambregs_ximera/ae_pot_gravitationele.tex
+++ b/lambregs_ximera/ae_pot_gravitationele.tex
@@ -6,6 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Gravitationele potentiële energie}{}
+    \xmsource
 
 
 	\subsection{Gravitationele potenti\"ele energie}\label{gravitationele potentiele energie}
