--- a/lambregs_ximera/ae_pot_gravitationele_algemeen.tex
+++ b/lambregs_ximera/ae_pot_gravitationele_algemeen.tex
@@ -6,6 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Gravitationele potentiële energie, algemeen}{}
+    \xmsource
 
 
 	\subsection{Gravitationele potenti\"ele energie, algemeen}\label{gravitationele potentiele energie alg}
