--- a/lambregs_ximera/hrmn_inleiding.tex
+++ b/lambregs_ximera/hrmn_inleiding.tex
@@ -6,6 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Inleiding}{}
+    \xmsource
 
 
 	% \chapter*{Inleiding}
@@ -17,13 +18,14 @@
 	\vec{\nabla}\cdot\vec{B}&=&0\\[3mm]
 	c^2\vec{\nabla}\times\vec{B}&=&\frac{\vec{j}}{\epsilon_0}+\frac{\partial\vec{E}}{\partial t}\\
 	\end{eqnarray*}
-	Je zal misschien zeggen dat ze je niets zeggen. Toch ken je alle vier de vergelijkingen op \'e\'en term na. Je bent waarschijnlijk gewoon niet vertrouwd met de symbolen en de compacte manier waarop ze zijn weergegeven.\footnote{Het symbool $\vec{\nabla}$ staat voor $\vec{\nabla}=\frac{\partial}{\partial x}\vec{e}_x+\frac{\partial}{\partial y}\vec{e}_y+\frac{\partial}{\partial z}\vec{e}_z$. Het is een operator. Ze wordt de nabla-operator genoemd. $\times$ staat voor het vectorproduct (de derde rechterhandregel ken je om de richting van de resulterende vector te bepalen) en $\cdot$ staat voor het scalair product.} De letters E en B zouden wel een \emph{lichtje} moeten doen branden; het gaat over elektrische en magnetische velden. De vergelijkingen vormen de fundamentele wetten van het elektromagnetisme en worden de wetten van Maxwell\footnote{James Clerk Maxwell (1831 - 1879)} genoemd.\footnote{De eerste wet is de wet van Coulomb, maar dan beschreven voor elektrische velden in plaats van met krachten. Het symbool $\rho$ staat hier niet voor massadichtheid maar voor ladingsdichtheid. De term $\vec{\nabla}\cdot\vec{E}$ wordt de divergentie van het elektrisch veld genoemd en beschrijft de mate waarin het veld in een punt in de ruimte wordt opgewekt. De wet geeft de relatie tussen een lading en het elektrisch veld dat ze genereert. $\epsilon_0$ is op $4\pi$ na gelijk aan de constante $k$ in de wet van coulomb: $k=\frac{1}{4\pi\epsilon_0}$.
+	Je zal misschien zeggen dat ze je niets zeggen. Toch ken je alle vier de vergelijkingen op \'e\'en term na. Je bent waarschijnlijk gewoon niet vertrouwd met de symbolen en de compacte manier waarop ze zijn weergegeven.\footnote{Het symbool $\vec{\nabla}$ staat voor $\vec{\nabla}=\frac{\partial}{\partial x}\vec{e}_x+\frac{\partial}{\partial y}\vec{e}_y+\frac{\partial}{\partial z}\vec{e}_z$. Het is een operator. Ze wordt de nabla-operator genoemd. $\times$ staat voor het vectorproduct (de derde rechterhandregel ken je om de richting van de resulterende vector te bepalen) en $\cdot$ staat voor het scalair product.} De letters E en B zouden wel een \emph{lichtje} moeten doen branden; het gaat over elektrische en magnetische velden. De vergelijkingen vormen de fundamentele wetten van het elektromagnetisme en worden de wetten van Maxwell\footnote{James Clerk Maxwell (1831 - 1879)} genoemd.
+	% \footnote{De eerste wet is de wet van Coulomb, maar dan beschreven voor elektrische velden in plaats van met krachten. Het symbool $\rho$ staat hier niet voor massadichtheid maar voor ladingsdichtheid. De term $\vec{\nabla}\cdot\vec{E}$ wordt de divergentie van het elektrisch veld genoemd en beschrijft de mate waarin het veld in een punt in de ruimte wordt opgewekt. De wet geeft de relatie tussen een lading en het elektrisch veld dat ze genereert. $\epsilon_0$ is op $4\pi$ na gelijk aan de constante $k$ in de wet van coulomb: $k=\frac{1}{4\pi\epsilon_0}$.
 	
-	De tweede wet is de elektromagnetische inductiewet. De term in het linkerlid wordt de rotor van het elektrisch veld genoemd. Ze meet in hoeverre het veld een vortex of draaibeweging vertoont. Het rechterlid geeft de verandering van het magnetisch veld aan. Er staat de afgeleide naar de tijd (de gekrulde delta $\partial$ kan je lezen als een $d$). Herinner je dat een bewegende magneet een stroom kan opwekken in een spoel. De stroom volgt een cirkel waarvan het vlak loodrecht op de bewegingsrichting van de magneet staat. 
+	% De tweede wet is de elektromagnetische inductiewet. De term in het linkerlid wordt de rotor van het elektrisch veld genoemd. Ze meet in hoeverre het veld een vortex of draaibeweging vertoont. Het rechterlid geeft de verandering van het magnetisch veld aan. Er staat de afgeleide naar de tijd (de gekrulde delta $\partial$ kan je lezen als een $d$). Herinner je dat een bewegende magneet een stroom kan opwekken in een spoel. De stroom volgt een cirkel waarvan het vlak loodrecht op de bewegingsrichting van de magneet staat. 
 	
-	De derde wet ken je ook. Ze zegt dat de divergentie van het magnetisch veld nul is. Met andere woorden kunnen er in een punt in de ruimte niet meer magnetische veldlijnen vertrekken dan dat er toekomen. Magnetische veldlijnen zijn gesloten of er zijn geen monopolen voor het magnetisme \ldots
+	% De derde wet ken je ook. Ze zegt dat de divergentie van het magnetisch veld nul is. Met andere woorden kunnen er in een punt in de ruimte niet meer magnetische veldlijnen vertrekken dan dat er toekomen. Magnetische veldlijnen zijn gesloten of er zijn geen monopolen voor het magnetisme \ldots
 	
-	Als we bij de vierde wet de tweede term in het rechterlid even wegnemen, en lezen dat $\vec{j}$ voor de stroomsterkte staat, dan staat hier de wet die je in het 5de onder de vorm $B=\frac{\mu_0}{2\pi}\frac{I}{d}$ hebt geleerd. Het is de wet van Biot-Savart. Ze geeft de relatie tussen de stroomsterkte en de sterkte van het magnetisch veld dat rond de draad wordt gegenereerd. Herinner je dat de veldlijnen concentrische cirkels waren en zie dat het linkerlid nu de rotor van dat magnetisch veld is. Het linkerlid meet dus de mate waarin het magnetisch veld rondgaat.} \footnote{\textit{Ceci n'est pas une voetnoot.}\footnotemark}\footnotetext{In de strikte betekenis van het woord wel, maar dan toch een van ondergeschikt belang.}
+	% Als we bij de vierde wet de tweede term in het rechterlid even wegnemen, en lezen dat $\vec{j}$ voor de stroomsterkte staat, dan staat hier de wet die je in het 5de onder de vorm $B=\frac{\mu_0}{2\pi}\frac{I}{d}$ hebt geleerd. Het is de wet van Biot-Savart. Ze geeft de relatie tussen de stroomsterkte en de sterkte van het magnetisch veld dat rond de draad wordt gegenereerd. Herinner je dat de veldlijnen concentrische cirkels waren en zie dat het linkerlid nu de rotor van dat magnetisch veld is. Het linkerlid meet dus de mate waarin het magnetisch veld rondgaat.} \footnote{\textit{Ceci n'est pas une voetnoot.}\footnotemark}\footnotetext{In de strikte betekenis van het woord wel, maar dan toch een van ondergeschikt belang.}
 	
 	Dit is niet omdat hij ze heeft uitgevonden maar omdat hij -- naast die ene term die je niet kent er aan toegevoegd te hebben -- de verschillende bestaande wetten heeft samengevoegd. Zo eenvoudige, compacte vergelijkingen met symbolen die een lust zijn voor het oog, in een wiskundige taal die onze snaar van zuivere logica en abstractie doet trillen, omvatten en beschrijven een onwaarschijnlijke uitgebreide waaier van verschijnselen. Dat is fysica ten top!
 	
