--- a/lambregs_ximera/nwtn_traagheid.tex
+++ b/lambregs_ximera/nwtn_traagheid.tex
@@ -6,6 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{De wet van de traagheid}{}
+    \xmsource
 
 
 	Het onderdeel binnen de mechanica dat zich met het verklarende principe bezighoudt, is de dynamica. Tot nu toe hebben we in de kinematica enkel bewegingen beschreven. We willen die bewegingen nu ook fysisch verklaren. De drie beginselen van Newton vormen, samen met enkele krachten, de fundamenten waarop de klassieke mechanica is gebouwd. 
