--- a/lambregs_ximera/nwtn_tweede_beginsel.tex
+++ b/lambregs_ximera/nwtn_tweede_beginsel.tex
@@ -6,6 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Het tweede beginsel van Newtorn}{}
+    \xmsource
 
 
 	\section{Het tweede beginsel van Newton}
