--- a/preamble.tex
+++ b/preamble.tex
@@ -1237,3 +1237,17 @@
 % \excludecomment{oplossing}
 
 %\includeonly{F_Files/voorblad, F_Files/inhoudspagina,F_Files/inleiding,F_Files/eendimensionalebewegingen,F_Files/oefeningen_1d}
+
+
+
+
+
+\providecommand{\xmsource}{
+    \ifonlineTF{
+    \begin{xmdiv}{xmsource}
+        Vertrokken uit de cursus van Bart Lambregs op 31/03/2025
+    \end{xmdiv}
+    }{
+        \renewcommand{\xmorganisatienaam}{{\smaller Gebaseerd op eigen cursus Bart Lambregs}}
+    }
+}
