--- a/lambregs_ximera/ae_constante_kracht.tex
+++ b/lambregs_ximera/ae_constante_kracht.tex
@@ -6,6 +6,8 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Arbeid geleverd door een constante kracht}{}
+    \xmsource
+    \xmsource
 
 
 	%% \chapter{Arbeid \& Energie}
