--- a/lambregs_ximera/knmtc_2dim_onafhankelijkheidsbeginsel.tex
+++ b/lambregs_ximera/knmtc_2dim_onafhankelijkheidsbeginsel.tex
@@ -6,6 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Onafhankelijkheidsbeginsel}{}
+    \xmsource
 
 	%% \chapter{Tweedimensionale bewegingen}
 
