fys_cursus in commentaar

--- a/fys_cursus.tex
+++ b/fys_cursus.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,a4paper,titlepage,twoside]{report}
+% \documentclass[12pt,a4paper,titlepage,twoside]{report}
 \usepackage{graphicx,wrapfig,tikz,comment,tabularx,natbib,amssymb,amsthm,amsmath,hyperref}
 %\usepackage{rawfonts,eucal,braket,float,array,pgf,mathrsfs,pdfpages}
 \usepackage[utf8]{inputenc}
