--- a/lambregs.tex
+++ b/lambregs.tex
@@ -8,17 +8,12 @@
     \renewcommand{\xmcursusnaam}{{\textsc{Natuurkunde}}}
 }
 
-
-%  HIER NOG DE KORTE PREAMBLE VAN LAMBREGS ZETTEN 
-
+\logo{xmPictures/nom_logo.png}
 
 \begin{document}
 %	\setcounter{tocdepth}{2}
-    \xmtitle{Natuurkunde}{}  
+    \xmtitle{Natuurkunde 6de jaar doorstroom}{}  
  
-
-
-
 
 
 \part{Eendimensionale bewegingen}
