figures + logo + global css source

--- a/lambregs.tex
+++ b/lambregs.tex
@@ -8,13 +8,16 @@
     \renewcommand{\xmcursusnaam}{{\textsc{Natuurkunde}}}
 }
 
-\logo{xmPictures/nom_logo.png}
+\logo{xmPictures/nomlogo.png}
 
 \begin{document}
 %	\setcounter{tocdepth}{2}
     \xmtitle{Natuurkunde 6de jaar doorstroom}{}  
  
 
+\part{Inleiding}
+
+\activitychapter{lambregs_ximera/inleiding.tex}
 
 \part{Eendimensionale bewegingen}
 
