--- a/lambregs_ximera/ae_constante_kracht.tex
+++ b/lambregs_ximera/ae_constante_kracht.tex
@@ -35,12 +35,10 @@
 	\end{eqnarray*}
 	%\subsection{Kracht en verplaatsing; verschillende rich\-ting}
 	Indien de beschouwde kracht en de verplaatsing niet dezelfde richting hebben, wordt alleen de component van de kracht volgens de verplaatsing in rekening gebracht. Er is namelijk geen beweging geassocieerd met de component loodrecht op de verplaatsing.
-	\begin{figure}[h]
-	\begin{center}
+	\begin{image}
 	\includegraphics[width=0.7\textwidth]{arbeid_verschillende_richting}
-	\caption{kracht en verplaatsing met een verschillende richting}
-	\end{center}
-	\end{figure}
+	\end{image}
+	\captionof{figure}{kracht en verplaatsing met een verschillende richting}
 	
 	Als $\alpha$ de hoek tussen de kracht en de verplaatsing is, dan is de getalcomponent volgens de bewegingszin te schrijven als $F\cos{\alpha}$ en de arbeid door deze component geleverd als $W=F\cos{\alpha}\Delta x$. Dit laatste is niets anders dan het scalair product tussen de kracht en de verplaatsing.
 	
