--- a/lambregs_ximera/ae_pot_elastische.tex
+++ b/lambregs_ximera/ae_pot_elastische.tex
@@ -28,11 +28,9 @@
 	potentiele energie}
 	
 	We hernemen het voorbeeld van de veerkracht (\ref{voorbeeld Hooke}).
-	\begin{figure}[h]
-	\begin{center}
+	\begin{image}
 	\includegraphics[width=0.8\textwidth ,angle=0]{elastische_energie}
-	\end{center}
-	\end{figure}
+	\end{image}
 
 
 	%%%\newline
