--- a/lambregs_ximera/ae_pot_gravitationele.tex
+++ b/lambregs_ximera/ae_pot_gravitationele.tex
@@ -12,11 +12,11 @@
 	\subsection{Gravitationele potenti\"ele energie}\label{gravitationele potentiele energie}
 
 	Beschouw een massa op een hoogte boven het aardoppervlak. Vanuit deze positie kan ze arbeid verrichten en zal ze dus potenti\"ele energie bezitten. Als we de massa bijvoorbeeld laten vallen kan ze op de grond een nagel inslaan en dus arbeid verrichten.
-	\begin{figure}[h]
-	\begin{center}
+	
+	\begin{image}
 	\includegraphics[height=5.5cm ,angle=0]{gravitationele_energie}
-	\end{center}
-	\end{figure}
+	\end{image}
+
 	Bij het vallen van een hoogte $x_a$ naar een hoogte $x_b$ levert de zwaartekracht die aan de massa trekt een arbeid gelijk aan:
 	\begin{eqnarray*}
 	W\,=\,\int_{x_a}^{x_b}F_zdx\,=\,\int_{x_a}^{x_b}(-mg)dx\,=\,mgx_a-mgx_b
