--- a/lambregs_ximera/ae_pot_gravitationele_algemeen.tex
+++ b/lambregs_ximera/ae_pot_gravitationele_algemeen.tex
@@ -12,11 +12,9 @@
 	\subsection{Gravitationele potenti\"ele energie, algemeen}\label{gravitationele potentiele energie alg}
 
 	Beschouw een massa onderhevig aan de universele gravitatiekracht. We gaan opnieuw opzoek naar een potenti\"ele energiefunctie geassocieerd aan deze kracht.
-	\begin{figure}[h]
-	\begin{center}
+	\begin{image}
 	\includegraphics[width=0.9\textwidth ,angle=0]{gravitationele_energie_algemeen}
-	\end{center}
-	\end{figure}
+	\end{image}
 	
 	Kiezen we een $x$-as met de oorsprong op de massa $m$ dan wordt, omdat de kracht steeds naar de oorsprong is gericht, de component van de universele gravitatiekracht op de massa $m'$ gegeven door
 	\begin{eqnarray*}
