--- a/lambregs_ximera/knmtc_1dim_ERB.tex
+++ b/lambregs_ximera/knmtc_1dim_ERB.tex
@@ -34,11 +34,11 @@
 	}
 	
 	Aangezien de snelheid van een ERB constant is, is de beginsnelheid $v_0=v(t_0)$ gelijk aan de snelheid $v$, $v_0=v$. De snelheidsfunctie is natuurlijk $v(t)=v$ en de versnellingsfunctie is $a(t)=0$.
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=.7\textwidth]{ERB_grafieken}
-	\caption{Grafieken van een ERB}
-	\end{figure}
+	\end{image}
+	\captionof{figure}{Grafieken van een ERB}
 	
 	
 	
