--- a/lambregs_ximera/knmtc_1dim_EVRB.tex
+++ b/lambregs_ximera/knmtc_1dim_EVRB.tex
@@ -60,12 +60,12 @@
 	
 	%%\newpage
 	
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=\textwidth]{EVRB_grafieken}
 	%\includegraphics[height=\textheight]{EVRB_grafieken}
-	\caption{Grafieken van een EVRB}
-	\end{figure}
+	\end{image}
+	\captionof{figure}{Grafieken van een EVRB}
 	
 	\clearpage
 	%%\newpage
