--- a/lambregs_ximera/knmtc_1dim_verticale_worp.tex
+++ b/lambregs_ximera/knmtc_1dim_verticale_worp.tex
@@ -12,11 +12,11 @@
 	\section{Verticale worp}
 
 	Onze perceptie van vallende voorwerpen is dat zwaardere lichamen sneller vallen dan lichtere. Een veertje en een hamer komen in de regel niet tegelij\-ker\-tijd op de grond terecht. Wanneer we echter voorwerpen in vacu\"um\footnote{In vacu\"um ondervinden voorwerpen geen luchtweerstand.} laten vallen, blijkt de massa geen rol te spelen bij de constante versnelling die de voorwerpen krijgen -- alle voorwerpen vallen met dezelfde versnelling. De verklaring hiervoor hoort thuis in de dynamica. In de kinematica houden we ons enkel bezig met de beschrijving van de beweging. Aangezien de valversnelling constant is, hebben we simpelweg met een EVRB te maken.
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=0.85\textwidth]{valbeweging_pasco2}
-	\caption{Experimenteel bekomen grafieken van een verticale worp waarbij de as naar beneden is geori\"enteerd.}
-	\end{figure}
+	\end{image}
+	\captionof{figure}{Experimenteel bekomen grafieken van een verticale worp waarbij de as naar beneden is geori\"enteerd.}
 	Strikt genomen verschilt de valversnelling van plaats tot plaats op de aarde, maar voor het gemak nemen wij in vraagstukken de waarde
 	\[g=9,81\rm\,m/s^2.\]
 	Omdat de verticale worp een EVRB is, kunnen we de formules (\ref{x(t)0}) en (\ref{v(t)0}) gebruiken om een valbeweging te beschrijven. Voor de versnelling $a$ nemen we dan $a=g$ of $a=-g$ al naargelang de ori\"entatie van de co\"ordinaatas.
@@ -34,9 +34,9 @@
 	\item[\textit{gegeven}]$x_1=4,0\rm\,m$%%%\newline$t_2=6,0\rm\,s$
 	\item[\textit{gevraagd}]$x_2-x_1$, $\overline{v}_{02}$
 	\item[\textit{oplossing}]De beweging is opgebouwd uit twee verschillende soorten bewegingen. Het eerste stuk is een vrije val, wat een EVRB is. In het tweede stuk (onder water) is de snelheid constant en is er dus geen versnelling. In geen geval kunnen we dus de formules voor een EVRB op het geheel toepassen. Die zijn immers afgeleid voor een beweging waar de versnelling (altijd, gedurende de hele beweging) constant is.
-	\begin{figure}[h]
-	\centering\includegraphics[width=0.4\textwidth]{boordschip}
-	\end{figure}
+	\begin{image}
+	\includegraphics[width=0.4\textwidth]{boordschip}
+	\end{image}
 	Omdat we weten hoe ver de bol moet vallen voordat hij het wateroppervlak bereikt, kunnen we zowel de tijd die de bol hiervoor nodig heeft als de snelheid waarmee de bol het wateroppervlak raakt, bepalen. We kiezen een as naar beneden zodat -- omdat de snelheid in deze richting toeneemt -- de versnelling positief is en gelijk aan de valversnelling $g$ (toch voor het eerste stuk). De beginsnelheid van de bol is nul omdat hij vanuit rust wordt losgelaten. Voor de tijd vinden we:
 	\begin{eqnarray}
 	x_1=\frac{1}{2}gt^2\quad\Rightarrow\quad t_1&=&\sqrt{\frac{2x_1}{g}}\label{tijd_boordschip}
