--- a/lambregs_ximera/knmtc_2dim_horizontale_worp.tex
+++ b/lambregs_ximera/knmtc_2dim_horizontale_worp.tex
@@ -14,11 +14,11 @@
 	\section{De horizontale worp}
 
 	We bekijken een voorbeeld van een tweedimensionale beweging. Wanneer een object horizontaal met een bepaalde beginsnelheid wordt gecatapulteerd, noemen we die beweging een horizontale worp. Wij beschouwen de worp in het luchtledige.
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=0.6\textwidth]{horizontaleworp_tekening}
-	\caption{De snelheid in horizontale richting verandert niet, die in de verticale richting neemt lineair toe in de tijd}
-	\end{figure}
+	\end{image}
+	\captionof{figure}{De snelheid in horizontale richting verandert niet, die in de verticale richting neemt lineair toe in de tijd}
 	%%%\newline
 	In de beschrijving kunnen we de $x$-as horizontaal en de $y$-as verticaal naar beneden nemen. Omdat er volgens de $x$-as geen versnelling is het lichaam volgens de $y$-as valt met de valversnelling $g$, kunnen we de formules voor een ERB en een EVRB (Zie (\ref{x(t)0}) en (\ref{v(t)0})) op de afzonderlijke assen toepassen en zo de volledige beweging beschrijven.%\footnote{Strikt genomen zoeken we hier nog niet naar een verklaring (die voor de horizontale beweging in de wet van de traagheid zit) maar beschrijven we enkel de beweging. Waarom de versnelling nul en $g$ is, vragen we ons dus zogezegd nog even niet af.}.
 	\begin{equation*}
