--- a/lambregs_ximera/nwtn_derde_beginsel.tex
+++ b/lambregs_ximera/nwtn_derde_beginsel.tex
@@ -16,17 +16,21 @@
 	\section{Het derde beginsel van Newton}
 
 	Meestal plooien we onze vingers naar onze handpalm toe. De praktijk leert ons dat het andersom toch iets moeilijker gaat. Misschien vandaar. Als je echter met je andere hand wat helpt en duwt -- een kracht uitoefent -- plooien je vingers al iets verder naar achter. Uit zichzelf geraken ze niet zo ver. Als je nu -- ter vergelijking -- met gestrekte vingers tegen de tafel duwt, plooien je vingers eveneens meer naar achteren dan dat ze uit zichzelf zouden kunnen. Je moet concluderen dat naast het feit dat je een kracht op de tafel uitoefent\footnote{Misschien nu met weinig beweging tot gevolg.} de tafel op zijn beurt een kracht op je vingers uitoefent. Zonder extern inwerkende kracht zouden je vingers immers niet zo ver kunnen doorbuigen.
-	%\begin{figure}[h]
+	%\begin{image}
 	%\begin{center}
 	%\includegraphics[width=.45\textwidth]{Newtons_cradle_animation_book}
-	%\caption{Een fascinerend speeltje}
+	%\captionof{figure}{Een fascinerend speeltje}
 	%\end{center}
-	%\end{figure}
-	\begin{wrapfigure}{R}{0.5\textwidth}
-	\centering
+	%\end{image}
+
+	\begin{image}
+	% \begin{wrapfigure}{R}{0.5\textwidth}
+	
 	\includegraphics[width=0.44\textwidth]{Newtons_cradle_animation_book}
-	\caption{Een fascinerend speeltje}
-	\end{wrapfigure}
+	% \end{wrapfigure}
+	\end{image}
+	\captionof{figure}{Een fascinerend speeltje}
+
 	Een ander voorbeeld waarin lichamen krachten op mekaar uitoefenen is zo'n decoratief speeltje waar opgehangen metalen bolletjes op een fascinerende manier al botsend heen en weer slingeren. Een bolletje dat met een snelheid aangeslingerd komt, wordt tot stilstand gebracht terwijl een ander bolletje vanuit stilstand tot dezelfde snelheid wordt gelanceerd. Omdat de massa's van de kogeltjes even groot zijn en de versnelling van de ene even groot is als de vertraging van de andere, moeten de kogeltjes op elkaar even grote krachten uitoefenen. De derde wet van Newton -- ook wel de wet van actie en reactie genoemd -- \textit{poneert} dat de krachten die lichamen wederzijds uitoefenen \textit{altijd} even groot zijn.
 	%%%\newline
 	\kader{
