--- a/lambregs_ximera/nwtn_oplossingsstrategie.tex
+++ b/lambregs_ximera/nwtn_oplossingsstrategie.tex
@@ -40,11 +40,9 @@
 	\item[Opgave] Twee massa's $m_1$ en $m_2$ zijn via een touwtje en een katrol van te verwaarlozen massa met elkaar verbonden zoals in de figuur. Er is geen wrijving aanwezig. De massa's hebben een versnelling zoals aangegeven.
 	%%%\newline
 	Bepaal de grootte van de versnelling van beide massa's en de grootte van de spankracht in het touw.
-	\begin{figure}[h]
-	\begin{center}
+	\begin{image}
 	\includegraphics[width=0.45\textwidth, angle=0]{blokken_helling_opl}
-	\end{center}
-	\end{figure}
+	\end{image}
 	\item[gegeven]$m_1,~m_2,~\varphi$
 	\item [gevraagd]$a$, $F_s$
 	\item [oplossing]De tweede wet van Newton toepassen op $m_1$ levert
