--- a/lambregs_ximera/nwtn_traagheid.tex
+++ b/lambregs_ximera/nwtn_traagheid.tex
@@ -19,12 +19,10 @@
 	\section{De wet van de traagheid}
 	
 	Op 22 oktober 1895 gebeurde er in het eindstation Gare Montparnasse -- Parijs, een ongeluk. De treinbestuurder was door het station gereden en pas 30 meter voorbij het einde van het spoor tot stilstand gekomen.
-	\begin{figure}[h]
-	\begin{center}
+	\begin{image}
 	\includegraphics[width=.8\textwidth]{Train_wreck_at_Montparnasse_1895}
-	\caption{Gare Montparnasse. Parijs 1895}
-	\end{center}
-	\end{figure}
+	\end{image}
+	\captionof{figure}{Gare Montparnasse. Parijs 1895}
 	
 	De figuur ademt de onvermijdelijke wet van de traagheid uit \ldots
 	%%%\newline
@@ -42,34 +40,34 @@
 	hebben en willen we harder bewegen, we een grotere kracht nodig hebben. Die kracht zou dan moeten dienen om om het streven naar de `natuurlijke' toestand van rust, tegen te gaan en de snelheid te onderhouden. Wat denk je, is dit niet in strijd met de wet van de traagheid \ldots?!\footnote{Als je tegen een topsnelheid van $300\rm\,km/h$ in de Thalys richting Parijs zit, voel je de zetel dan harder tegen jou duwen dan dat ze dat doet wanneer je nog stilstaat in Brussel-Zuid \ldots?}
 	
 	Laten we -- om deze misvatting te bestrijden -- een gedachte-experiment uitvoeren. We doen dus niks concreets -- enkel redeneren. Het is een gedachte-experiment van Galileo Galilei (1564-1642). Om het uit te voeren hebben we een speciale knikkerbaan nodig, eentje zonder wrijving.\footnote{Ik heb horen zeggen dat er lang geleden een klein winkeltje bestond dat dergelijke knikkerbanen verkocht. Doorheen de jaren is het adres echter verloren gegaan. Niemand weet meer waar het zich bevindt \ldots} Laten we ervan uitgaan dat we in het bezit zijn van zo'n uiterst zeldzame baan. Onderstaande figuur toont dan de situatie waarin we een knikker op een bepaalde hoogte aan de linkerkant loslaten. Omdat er geen wrijving is, zal -- omwille van behoud van energie -- de knikker op de andere helling tot eenzelfde hoogte rollen, daar momentaan stilvallen en vervolgens terugrollen.
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=.7\textwidth]{Afbeelding1}
-	%\caption{Het knikkertje rolt tot op dezelfde hoogte}
+	%\captionof{figure}{Het knikkertje rolt tot op dezelfde hoogte}
 	\label{Afbeelding1}
-	\end{figure}
+	\end{image}
 	
 	Als we vervolgens de rechterhelling vlakker maken, zoals in onderstaande figuur, zal ons knikkertje ook nu tot dezelfde hoogte rollen. En dit ongeacht de grotere afstand. De energie-inhoud moet immers gelijk blijven.
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=.7\textwidth]{Afbeelding2}
-	\end{figure}
+	\end{image}
 	
 	Als laatste stap in onze redenering, misleiden we ons knikkertje\footnote{Mag dat wel?}. Het knikkertje moet -- zo hebben we het hem verteld -- een tijdje horizontaal rollen om pas dan de rechterhelling te kunnen oprollen. Opnieuw tot dezelfde hoogte. Nu hebben we echter de rechterhelling oneindig ver weg gezet! Ons arm knikkertje zal dus blijven rollen (herinner u, er was geen wrijving) in de veronderstelling de helling ooit te zullen tegenkomen. 
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=.7\textwidth]{Afbeelding3}
-	\end{figure}
+	\end{image}
 	Gedurende het rollen op het horizontale stuk is de knikker dus niet onderhevig aan een voorwaartse kracht!\footnote{Wie zou immers die kracht uitoefenen \ldots?!} De beweging moet niet worden `onderhouden'. 
 	
 	Uit ons gedachte-experiment kunnen we concluderen dat er een kracht nodig was om de knikker in beweging te brengen maar dat er \emph{geen} kracht nodig is om de beweging van de knikker op een rechte lijn en met een constante snelheid te onderhouden. Er is dus geen recht evenredig verband tussen kracht en snelheid \footnote{Moest je dat al denken.}. Kracht en snelheid kunnen zelfs tegengesteld zijn -- denk maar aan de wrijvingskracht die de beweging tegenwerkt.
 	
 	De tendens van lichamen om zich te verzetten tegen de verandering van beweging, noemen we \textit{inertie} of \textit{traagheid}. Hoe groter de massa, hoe meer een voorwerp zich verzet.
 	
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=0.8\textwidth]{Garfield_firstlaw}
-	\end{figure}
+	\end{image}
 	
 	\voorbeeld{}{\textsf{
 	Wanneer je met de fiets fietst, rechtdoor en met een constante snelheid, is de kracht die je voorwaarts uitoefent dan groter, kleiner of gelijk aan de weerstandskracht die achterwaarts is gericht? Is met andere woorden de resulterende kracht op jouw fiets naar voren gericht, nul of naar achteren gericht? 
