--- a/lambregs_ximera/ae_niet_constante_kracht.tex
+++ b/lambregs_ximera/ae_niet_constante_kracht.tex
@@ -22,11 +22,11 @@
 	Eenvoudigheidshalve beperken we ons hier tot bewegingen op een rechte. Bewegingen in meerdere dimensies vereisen een uitgebreidere integraaltheorie dan hetgeen we nu kennen.
 	
 	We geven een opbouw om tot een definitie van arbeid te komen in het geval dat de kracht dus niet constant is. Ze vertoont gelijkenissen met de opbouw van de integraal.
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=0.85\textwidth]{arbeid_nietconstantekracht}
-	\caption{Opbouw arbeid bij een niet-constante kracht}
-	\end{figure}
+	\end{image}
+	\captionof{figure}{Opbouw arbeid bij een niet-constante kracht}
 	
 	Verdeel de verplaatsing $x_b-x_a$ in heel veel hele kleine stukjes $\Delta x$ bijvoorbeeld als volgt:
 	\begin{eqnarray*}
@@ -65,10 +65,10 @@
 	F(x)=-kx
 	\end{eqnarray*}
 	\textsf{Hierin is $k$ de veerconstante en $x$ de verlenging van de veer t.o.v. zijn evenwichtspositie~\footnote{Uit het vierde jaar ken je deze uitdrukking onder de vorm $F=k\Delta l$.}. Het minteken komt van het feit dat de kracht steeds tegengesteld is aan de uit\-wij\-king. Het is een \textit{terugroepkracht}. Bij het samendrukken van de veer bijvoorbeeld is $x<0$ zodat de kracht positief en dus tegengesteld aan de uitwijking is.}
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=0.85\textwidth ,angle=0]{elastische_energie}
-	\end{figure}
+	\end{image}
 	
 	\textsf{We willen de arbeid berekenen door de veerkracht geleverd op een massa bij de verplaatsing van een verlenging $x_a$ naar een verlenging $x_b$. Volgens de definitie wordt dit:}
 	\begin{eqnarray*}
