--- a/lambregs_ximera/glvn_periodieke_golven.tex
+++ b/lambregs_ximera/glvn_periodieke_golven.tex
@@ -16,8 +16,8 @@
 	%%%\newline
 	We beschouwen een sinuso\"idale golf die naar rechts beweegt -- volgens de $x$-as. Om een wiskundige beschrijving van een golf te vinden, bekijken we twee momentopnames op willekeurige tijdstippen. Voor het gemak nemen we als eerste tijdstip $t=0$ en noemen we het tweede tijdstip $t$. In de tijdsspanne $t$ is de golf $vt$ eenheden naar rechts opgeschoven, zie figuur (\ref{afleiding_golfvergelijking}). $v$ is uiteraard de golfsnelheid.
 	
-	\begin{figure}[!h]
-	\centering
+	\begin{image}
+	
 	
 	\begin{tikzpicture}[line cap=round,line join=round,x=8.0cm,y=8.0cm]
 	%\draw[very thin,color=gray] (0,-0.24) grid (1.4,0.24);
@@ -38,8 +38,8 @@
 	\draw (1/3,2/8) node {$vt$};
 	\end{tikzpicture}
 	
-	\caption{\emph{De uitwijking van een golf in functie van de tijd op $t=0$ en een willekeurig tijdstip $t$}}\label{afleiding_golfvergelijking}
-	\end{figure}
+	\end{image}
+	\captionof{figure}{\emph{De uitwijking van een golf in functie van de tijd op $t=0$ en een willekeurig tijdstip $t$}}\label{afleiding_golfvergelijking}
 	
 	De verschijningsvorm van de golf in de ruimte kunnen we op $t=0$ weergeven met volgende sinusfunctie:
 	\begin{eqnarray*}
@@ -81,75 +81,75 @@
 	%
 	%%\includepdf[pages={1},scale=1]{./golven_giancoli/scan_0.pdf}
 	%
-	%\begin{figure}[h]
+	%\begin{image}
 	%\flushright
 	%\includegraphics[width=0.8\textwidth]{./golven_giancoli/scan_0}
-	%\end{figure}
+	%\end{image}
 	%
-	%\begin{figure}[h]
-	%\centering
+	%\begin{image}
+	%
 	%\includegraphics[width=1.1\textwidth]{./golven_giancoli/scan_1}
-	%\end{figure}
+	%\end{image}
 	%
-	%\begin{figure}[h]
-	%\centering
+	%\begin{image}
+	%
 	%\includegraphics[width=1.1\textwidth]{./golven_giancoli/scan_2}
-	%\end{figure}
+	%\end{image}
 	%
-	%\begin{figure}[h]
-	%\centering
+	%\begin{image}
+	%
 	%\includegraphics[width=1.1\textwidth]{./golven_giancoli/scan_3}
-	%\end{figure}
+	%\end{image}
 	%
-	%\begin{figure}[h]
-	%\centering
+	%\begin{image}
+	%
 	%\includegraphics[width=1.1\textwidth]{./golven_giancoli/scan_4}
-	%\end{figure}
+	%\end{image}
 	%
-	%\begin{figure}[h]
-	%\centering
+	%\begin{image}
+	%
 	%\includegraphics[width=1.1\textwidth]{./golven_giancoli/scan_5}
-	%\end{figure}
+	%\end{image}
 	%
-	%\begin{figure}[h]
-	%\centering
+	%\begin{image}
+	%
 	%\includegraphics[width=1.1\textwidth]{./golven_giancoli/scan_6}
-	%\end{figure}
+	%\end{image}
 	%
-	%\begin{figure}[h]
-	%\centering
+	%\begin{image}
+	%
 	%\includegraphics[width=1.1\textwidth]{./golven_giancoli/scan_7}
-	%\end{figure}
+	%\end{image}
 	%
-	%\begin{figure}[h]
-	%\centering
+	%\begin{image}
+	%
 	%\includegraphics[width=1.1\textwidth]{./golven_giancoli/scan_8}
-	%\end{figure}
+	%\end{image}
 	%
-	%\begin{figure}[h]
-	%\centering
+	%\begin{image}
+	%
 	%\includegraphics[width=0.8\textwidth]{./golven_giancoli/scan_9}
-	%\end{figure}
+	%\end{image}
 	%
-	%\begin{figure}[h]
-	%\centering
+	%\begin{image}
+	%
 	%\includegraphics[width=0.8\textwidth]{./golven_giancoli/scan_10}
-	%\end{figure}
+	%\end{image}
 	%
-	%\begin{figure}[h]
-	%\centering
+	%\begin{image}
+	%
 	%\includegraphics[width=1.1\textwidth]{./golven_giancoli/scan_11}
-	%\end{figure}
+	%\end{image}
 	%
-	%%\begin{figure}[h]
-	%%\centering
+	%%\begin{image}
+	%%
 	%%\includegraphics[width=1.1\textwidth]{./golven_giancoli/scan_12}
-	%%\end{figure}
+	%%\end{image}
 	%
-	%%\begin{figure}[h]
-	%%\centering
+	%%\begin{image}
+	%%
 	%%\includegraphics[width=1.1\textwidth]{./golven_giancoli/scan_13}
-	%%\end{figure}
+	%%\end{image}
 	%
 	%%\subsection{Reflectie}
 	%%vb echo, licht op een spiegel, zichtbare objecten
