--- a/lambregs_ximera/hrmn_harmonische_oscillator.tex
+++ b/lambregs_ximera/hrmn_harmonische_oscillator.tex
@@ -26,10 +26,10 @@
 	\section{De harmonische oscillator}
 	
 	Als eerste voorbeeld behandelen we een eenvoudig mechanisch systeem: een massa die aan een veer is bevestigd. We noemen dit een massa-veersysteem. En zoals we al zo vaak hebben gedaan, beschouwen we een model waar geen wrijving aanwezig is. Laten we bovendien de veer een horizontale ori\"entatie geven zodat we ook de zwaartekracht buiten beschouwing kunnen laten.
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=0.8\textwidth]{kogeltegenveer2}
-	\end{figure}
+	\end{image}
 	Wanneer we de massa uit de positie halen waar de veer zijn rustlengte heeft en hem vervolgens loslaten, voert de massa een trilling uit. We constateren dat hij heen en weer beweegt waarbij hij steeds door de evenwichtspositie gaat. Deze beweging willen we natuurlijk uit onze natuurwetten tevoorschijn zien komen. Meer bepaald moet de tweede wet van Newton -- ons beginsel der beginselen in de klassieke mechanica -- de beweging opleveren. De trilling is een mechanisch verschijnsel en moet dus te verklaren zijn met behulp van die natuurwetten. 
 	
 	Om de beweging te kunnen vinden, moeten we het systeem vrij maken -- alle krachten erop tekenen. We hebben dus de resulterende kracht nodig. Omdat het lichaam op een ondergrond rust en geen verticale versnelling heeft, heffen de normaalkracht en de zwaartekracht elkaar op. De resulterende kracht is bijgevolg de veerkracht. We gebruiken de wet van Hooke en gieten de component van de kracht volgens de bewegingsrichting in de vorm zoals we ze al kennen:\footnote{Deze beschrijving van de veerkracht is natuurlijk een benadering. Ze is maar geldig voor zolang de veer een niet te grote uitwijking kent. Het minteken zorgt voor een terugroepkracht; wanneer de co\"ordinaat $x$ positief is, is de component van de kracht negatief en wanneer de co\"ordinaat negatief is, is de component positief.}
@@ -50,10 +50,10 @@
 	\end{eqnarray*}} We zoeken dus een functie die aan de vergelijking voldoet. Een functie die voldoet is dan een oplossing van de vergelijking en dus een mogelijke beweging die de massa kan volgen. We spreken hier in eerste instantie over \emph{een} oplossing omdat er a priori\footnote{Vooraf beschouwd. Zonder het gezien, ervaren of onderzocht te hebben.} verschillende oplossingen kunnen zijn.
 	
 	Het oplossen van differentiaalvergelijkingen is bijna een stiel op zich. Want dergelijke vergelijkingen zijn er in alle maten, geuren, kleuren en vooral moeilijkheidsgraden. En aangezien we die cursus willen overlaten aan degene die zich bij verdere studies hierin wil verdiepen, hebben wij op dit moment geen directe manier om tot de oplossingen te komen. Dat betekent dat we hier iets creatiever zullen moeten zijn en de methode van het ge\"inspireerd gokken zullen moeten toepassen \ldots In de modus van minder hoge ambities, kunnen we in eerste instantie een functie uit onze hoed toveren en nagaan of ze een oplossing is. Dat is natuurlijk onbegonnen werk wanneer we \'alle functies nagaan\footnote{Zoals het ook voor een schaakcomputer onbegonnen werk zou zijn, moest hij alle mogelijke zetten evalueren om de beste er uit te kunnen pikken.} maar haalbaar wanneer we ons fysisch inzicht erbij halen\footnote{Zoals ook een schaker alleen maar die paar zetten bestudeert waarvan hij ziet dat ze de moeite waard zijn.}. Zo moet de functie de beweging beschrijven en zullen de vergelijkingen voor een EVRB naar alle waarschijnlijkheid niet voldoen. De massa gaat heen en weer zodat we met een functie te maken moeten hebben die dat ook doet. Waarom zou dus een \emph{sinusfunctie} niet voldoen \ldots?!
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=.6\textwidth]{ht_papierrol}
-	\end{figure}
+	\end{image}
 	
 	Om te proberen nemen we een eenvoudige sinusfunctie $x(t)=\sin\omega t$. Bij het invullen in de vergelijking (\ref{diffvgl_ht}) moeten we voor de eerste term in het linkerlid de tweede afgeleide berekenen; $x''(t)=-\omega^2\sin\omega t$. De tweede term geeft bij het invullen $\frac{k}{m}\sin\omega t$. Wil nu de voorgestelde functie een oplossing zijn, dan moet hetgeen we verkregen hebben, gelijk zijn aan het rechterlid -- namelijk nul.
 	\begin{eqnarray*}
@@ -76,10 +76,10 @@
 	We hebben nu de wiskundige oplossing van de differentiaalvergelijking gevonden. De massa trilt sinuso\"idaal in de tijd. Vandaar dat we over een harmonische trilling spreken.
 	
 	De verschillende parameters die in de oplossing (\ref{opl_diffvgl_ht}) voorkomen, willen we fysisch kunnen interpreteren. We willen hun betekenis kennen. Het gemakkelijkste is misschien terug te grijpen naar de algemene sinusfunctie. Daar stond de parameter $a$ voor de amplitude. Dat is dus hier voor $A$ niet anders; $A$ stelt de amplitude van de trilling voor. Voor de parameter $b$ hebben we de gelijkheid $b=\frac{2\pi}{p}$ waarin $p$ de periode van de functie is. Omdat onze onafhankelijke variabele de tijd is, is de fysische interpretatie van $p$ de tijd van \'e\'en cyclus -- waarvoor we het symbool $T$ gebruiken. 
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=.7\textwidth]{ht_tijd}
-	\end{figure}
+	\end{image}
 	Voor de parameter $\omega$, die we de pulsatie noemen, geldt dus
 	\begin{eqnarray*}
 	\omega=\frac{2\pi}{T}
@@ -91,10 +91,10 @@
 	De frequentie wordt bepaald door de sterkte van de veer en de grootte van de massa. Een grotere massa levert een kleinere frequentie op (de traagheid is groter) en een sterkere veer zorgt voor een grotere frequentie (de massa krijgt een grotere versnelling). De amplitude speelt blijkbaar geen rol.
 	
 	De parameter $\varphi$ is iets lastiger om inzichtelijk te kunnen duiden. Net zoals de amplitude wordt ze bepaald door de \emph{beginvoorwaarden}. Zo is de amplitude afhankelijk van bijvoorbeeld de afstand uit de evenwichtspositie waarop we de massa vanuit rust loslaten of van de snelheid die we ze bij initiatie van de beweging meegeven. De parameter $\varphi$ wordt bepaald door de positie van de massa op het tijdstip $t=0$. Immers is $x_0=x(t=0)=A\sin(\varphi)$. Het argument van de sinus\footnote{Het argument van de sinus is hetgeen waarvan de sinus wordt genomen/hetgeen dat tussen haakjes staat.} $\omega t+\varphi$ noemen we ook wel de \emph{fase} van de trilling zodat $\varphi$ de \emph{beginfase} wordt genoemd. De fase drukken we natuurlijk uit in radialen. De fase bepaalt waar we ons in de cyclus bevinden. 
-	%\begin{figure}[h]
-	%\centering
+	%\begin{image}
+	%
 	%\includegraphics[width=.7\textwidth]{ht_fase}
-	%\end{figure}
+	%\end{image}
 	%%%%\newline
 	De beginfase bepaalt dan ook de beginpositie. Zo is bijvoorbeeld de functie maximaal wanneer het argument $\pi/2$ is, wat betekent dat de massa op haar maximale uitwijking is. Is dus de beginfase gelijk aan $\pi/2$, dan begint de trilling vanuit haar maximale uitwijking. Een beginfase van $3\pi/2$ komt overeen met een minimale waarde bij het begin. In figuur \ref{beginposbeginfase} zie je verschillende mogelijkheden voor de beginfase, hier weergegeven als $\varphi_0$.
 	
@@ -108,15 +108,15 @@
 	
 	%%\newpage
 	
-	\begin{figure}
-		\centering
+	\begin{image}
+		
 		\includegraphics[width=.9\textwidth]{trillendeveer_a}
 		\includegraphics[width=.9\textwidth]{trillendeveer_b}
 		\includegraphics[width=.9\textwidth]{trillendeveer_c}
 		\includegraphics[width=.9\textwidth]{trillendeveer_d}
-		\caption{Relatie tussen beginpositie en beginfase}
+		\captionof{figure}{Relatie tussen beginpositie en beginfase}
 		\label{beginposbeginfase}
-	\end{figure}
+	\end{image}
 	
 	\clearpage
 	%%\newpage
@@ -130,11 +130,11 @@
 	\begin{eqnarray*}
 	E=E_k+E_p=\frac{1}{2}m\omega^2A^2\left(\sin^2(\omega t+\varphi)+\cos^2(\omega t+\varphi)\right)=\frac{1}{2}m\omega^2A^2
 	\end{eqnarray*}
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	%\includegraphics[width=.7\textwidth]{EpEkE}
 	\includegraphics[width=.9\textwidth]{ht_behoud_energie}
-	\end{figure}
+	\end{image}
 	Merk op dat de energie van een trilling recht evenredig is met het kwadraat van de amplitude. Een golf in de zee die dus twee keer zo hoog is, draagt vier keer zoveel energie met zich mee. In de figuur zie je mooi hoe de kinetische en de potenti\"ele energie in elkaar worden omgezet; het verlies van de ene is de winst van de andere. Let op het verschil tussen de periode van de energievormen en de periode van de eigenlijke trilling \ldots
 	
 	%%%\newpage
