--- a/lambregs_ximera/hrmn_mathematische_slinger.tex
+++ b/lambregs_ximera/hrmn_mathematische_slinger.tex
@@ -20,11 +20,13 @@
 	
 	Om de beweging te kunnen vinden d.m.v. de tweede wet van Newton, maken we een krachtendiagram. We voeren een assenstelsel rakend aan de baan van het voorwerp in. De richting rakend aan de baan noemen de tangenti\"ele richting, die loodrecht op de baan noemen we de normale richting. Natuurlijk kunnen we ook altijd voor een $x$-as en een $y$-as opteren.
 	%%%\newline
-	\begin{wrapfigure}[11]{r}{0.33\textwidth}
-	%\centering
+	\begin{image}
+	% \begin{wrapfigure}[11]{r}{0.33\textwidth}
+	%
 	\includegraphics[width=0.34\textwidth]{pendulum}
-	%\caption{A gull}
-	\end{wrapfigure}
+	%\captionof{figure}{A gull}
+	% \end{wrapfigure}
+	\end{image}
 	Volgens de normale richting zal de spankracht in het touw in combinatie met de normale component van de zwaartekracht voor de nodige middelpuntzoekende kracht zorgen. De massa beweegt immers op een cirkel met vari\"erende snelheid waardoor ook een vari\"erende middelpuntzoekende kracht nodig is. Echter kunnen we volgens deze richting niet veel leren over de manier waarop de massa heen en weer slingert. Daarvoor hoeven we enkel de tangenti\"ele richting te bekijken. We passen dan ook de tweede wet van Newton volgens deze richting toe. 
 	\begin{gather*}
 	F=ma\\
@@ -36,10 +38,10 @@
 	Dit is een \emph{niet}-lineaire differentiaalvergelijking. Ze is verre van eenvoudig om exact op te lossen. We hebben daartoe een veel zwaarder arsenaal aan wiskundige functies nodig dan dat wij op dit moment kennen. In feite is dat ook niet zo verwonderlijk. Wanneer we bijvoorbeeld de slinger vanuit een initi\"ele hoek van 120 graden met een voldoende hoge beginsnelheid laten vertrekken, zal de slinger niet slingeren maar pulserende rondjes blijven draaien. Deze oplossing samen met bijvoorbeeld stil blijven hangen op 180 graden en nog andere varianten, zijn allemaal mogelijkheden die aan de differentiaalvergelijking moeten voldoen. Ingewikkeld dus.
 	
 	Wij zullen ons hier beperken tot kleine hoeken\footnote{Ik weet het, dat doet pijn aan het wiskundig exacte deel van ons hart, maar in feite is het in de fysica nooit anders \ldots \'Alles wat we in de fysica doen is een benadering van de realiteit. Zo hebben we bij onze slinger reeds de massa van het touw overboord gegooid, de massa van het object geen dimensie gegeven, gedaan alsof de wrijvingskracht niet bestaat, de zwaartekracht benaderd door $mg$ terwijl die eigenlijk afhankelijk is van de hoogte boven het aardoppervlak, de wetten van Newton gebruikt waar we eigenlijk de wetten van de kwantummechanica zouden moeten bovenhalen, gedaan alsof slingers het enige in het universum zijn \ldots }. In dat geval kunnen we de sinus van een argument benaderen door het argument zelf, $\sin\alpha\approx\alpha$. \footnote{Herinner je misschien dat je ooit de limiet $\displaystyle\lim_{x\rightarrow0}\frac{\sin x}{x}=1$ bewezen hebt.} \footnote{In feite is de wet van Hooke enzelfde lineaire benadering van de veerkracht. Die is ook maar geldig voor zolang we de veer niet te ver uitrekken. Willen we accurater zijn, dan moeten we termen afhankelijk van bijvoorbeeld $x^2$ in rekening brengen \ldots}
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=0.4\textwidth]{sinx_x}
-	\end{figure}
+	\end{image}
 	% \begin{minipage}[t]{.5\textwidth}
 	% \begin{eqnarray*}
 	% \sin\alpha\approx\alpha
