--- a/lambregs_ximera/hrmn_resonantie.tex
+++ b/lambregs_ximera/hrmn_resonantie.tex
@@ -35,11 +35,11 @@
 	\end{array}
 	\end{eqnarray*}
 	Dat betekent dat de massa, na een korte overgangsperiode of nadat de eerste onregelmatige trillingen zijn uitgedoofd, een harmonische trilling zal uitvoeren met dezelfde frequentie als de externe aandrijving. Het bijzondere is echter terug te vinden in de amplitude. We zien dat al naargelang de opgelegde frequentie, we een andere amplitude krijgen. En jawel, als we een grafiek maken van de amplitude in functie van de aandrijving $\omega$ zien we dat in de buurt van de natuurlijke frequentie $\omega_0$ (om precies te zijn, een waarde die net iets kleiner is) de amplitude een sterke piek vertoont. 
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=.55\textwidth]{resonantie_curve}
-	\caption{$A$ in functie van $\omega$.}
-	\end{figure}
+	\end{image}
+	\captionof{figure}{$A$ in functie van $\omega$.}
 	De frequentie waarbij dit optreedt noemen we de \emph{resonantiefrequentie}. Het systeem zal dus bij \'e\'en specifieke frequentie extreem meetrillen. Op de juiste momenten wordt er dus aan de massa geduwd/getrokken zodat er maximaal energie wordt `ingepompt'. Die energie gaat dan natuurlijk weer verloren door de demping.
 	
 \end{document}
