--- a/lambregs_ximera/knmtc_2dim_eenparige_cirkelbeweging.tex
+++ b/lambregs_ximera/knmtc_2dim_eenparige_cirkelbeweging.tex
@@ -24,12 +24,12 @@
 	\Delta\vec{r}=\vec{r}_2-\vec{r}_1
 	\end{equation*}
 	is nu immers ook een vector die naast de afstand in vogelvlucht tussen twee punten, ook ge\"ori\"enteerd is. Het is natuurlijk belangrijk in welke richting die afstand wordt afgelegd.
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=0.4\textwidth]{plaatsvector}
 	\includegraphics[width=0.4\textwidth]{afgelegdeweg_verplaatsing}
-	\caption{Het verschil tussen afgelegde weg en verplaatsing}
-	\end{figure}
+	\end{image}
+	\captionof{figure}{Het verschil tussen afgelegde weg en verplaatsing}
 	Merk op dat de begrippen verplaatsing en afgelegde weg niet hetzelfde zijn. De afgelegde weg hangt af van de gevolgde baan en is de totale afgelegde afstand terwijl de verplaatsing enkel van begin- en eindpunt afhangt en een vectorgrootheid is.
 	
 	Naast de co\"ordinaatfuncties $x(t)$ en $y(t)$ is er ook de vergelijking van de baan $y(x)$. We bekomen deze door de tijd uit de co\"ordinaatfuncties te elimineren\footnote{Dit komt neer op de inverse $t(x)$ van $x(t)$ te vinden en deze te substitueren in $y(t)$. Dus $y(x)=y(t(x))$.}. De grafiek van deze baanvergelijking geeft ons het beeld van de baan maar zegt niets over de snelheid waarmee het object over deze baan beweegt. Daarvoor hebben we de afhankelijkheid van de tijd nodig.
@@ -37,7 +37,7 @@
 	\subsection{Snelheid}
 	
 	%\begin{wrapfigure}[9]{R}{0.35\textwidth}
-	%\centering
+	%
 	%\includegraphics[width=0.34\textwidth]{snelheidsvector}
 	%\end{wrapfigure}
 	Analoog aan de snelheid in \'e\'en dimensie, kunnen we in meerdere dimensies de snelheid defini\"eren als de afgeleide -- nu van de plaatsvector. De snelheid is dan opnieuw een vector:\footnote{De definitie van een afgeleide van een vector is evenzeer met een limiet. We maken gebruik van de uitdrukkingen $\vec{r}(t+\Delta t)=x(t+\Delta t)\vec{e}_x+y(t+\Delta t)\vec{e}_y$ en $\vec{r}(t)=x(t)\vec{e}_x+y(t)\vec{e}_y$.\begin{eqnarray*}
@@ -55,13 +55,13 @@
 	\vec{v}=v_x\vec{e}_x+v_y\vec{e}_y\quad\mathrm{met}\quad v_x=\frac{dx}{dt},\,v_y=\frac{dy}{dt}
 	\end{eqnarray*}
 	
-	%\begin{figure}[h]
-	%\centering
+	%\begin{image}
+	%
 	%%\includegraphics[width=0.38\textwidth]{gem_snelheidsvector}
 	%%\hspace{1cm}
 	%\includegraphics[width=0.4\textwidth]{snelheidsvector}
-	%\caption{De snelheidsvector is te ontbinden in componenten}
-	%\end{figure}
+	%\captionof{figure}{De snelheidsvector is te ontbinden in componenten}
+	%\end{image}
 	%%%%\newline
 	
 	%%\newpage
@@ -69,11 +69,11 @@
 	\begin{eigenschap}
 	De snelheidsvector is rakend aan de baan.
 	\end{eigenschap}
-	%\begin{figure}[h]
-	%\centering
+	%\begin{image}
+	%
 	%\includegraphics[width=0.4\textwidth]{snelheidrakend}
-	%\caption{De snelheid raakt aan de baan}
-	%\end{figure}
+	%\captionof{figure}{De snelheid raakt aan de baan}
+	%\end{image}
 	\begin{proof}
 	We kunnen dit bewijzen met de kettingregel, toegepast op de functie $y(t)=y(x(t))$.
 	\begin{eqnarray*}
@@ -89,11 +89,11 @@
 	\vec{a}=\frac{d\vec{v}}{dt}=\frac{dv_x}{dt}\vec{e}_x+\frac{dv_y}{dt}\vec{e}_y=a_x\vec{e}_x+a_y\vec{e}_y
 	\end{eqnarray*}
 	Merk op dat er een versnelling kan zijn wanneer de snelheidsvector van grootte verandert maar \'o\'ok wanneer de snelheidsvector van richting verandert! Als de snelheidsvector immers van richting verandert, veranderen zijn co\"ordinaten $v_x$ en/of $v_y$. Merk bovendien op dat de versnelling niet noodzakelijk samen hoeft te vallen met de baan \ldots
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=0.4\textwidth]{versnellingsvector}
-	\caption{De versnelling raakt niet noodzakelijk aan de baan}
-	\end{figure}
+	\end{image}
+	\captionof{figure}{De versnelling raakt niet noodzakelijk aan de baan}
 	
 	%%\newpage
 	
