--- a/lambregs_ximera/knmtc_2dim_onafhankelijkheidsbeginsel.tex
+++ b/lambregs_ximera/knmtc_2dim_onafhankelijkheidsbeginsel.tex
@@ -12,23 +12,25 @@
 
 	Als we in een vlak bewegen, hebben we te maken met een tweedimensionale beweging. 
 	Om ze te beschrijven voeren we nu een referentiestelsel met twee assen in. In de regel kiezen we een cartesiaans assenstelsel.  Door de co\"ordinaten $(x,y)$ van een punt dat het bewegende object voorstelt te geven, kunnen we de positie beschrijven. We kunnen echter ook een vector gebruiken.
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[width=.7\textwidth]{sterrentrajecten}
-	\caption{Sterrentrajecten aan de hemel}
-	\end{figure}
+	\end{image}
+	\captionof{figure}{Sterrentrajecten aan de hemel}
+
 	Omdat we om de snelheid van het object te kunnen beschrijven niet voldoende hebben aan alleen maar de grootte maar ook nood hebben aan een richting, maken we nu expliciet gebruik van vectoren en hun geschikte eigenschappen. Naast een nieuwe as voor de extra dimensie is het gebruik van vectoren de enige aanpassing die we aan ons formalisme van de kinematica moeten doen om bewegingen in twee dimensies te kunnen beschrijven.
 	
 
 	\section{Onafhankelijkheidsbeginsel}
 	
 	Stel je voor dat het heel mooi weer is. Zo van dat weer waar de hemel hemelsblauw is, er geen wolken aan de lucht zijn, de zon aan de hemel schittert en je niets liever doet dan een frisse neus halen. In zo'n weer zouden we diep in en uit ademen. Oh ja, detail, stel je ook voor dat er \emph{geen}\footnote{Begrijpelijk zou je kunnen opwerpen dat het nogal moeilijk is om frisse lucht die er niet is, in te ademen.} lucht is. Stel je bovendien voor dat je in het kraaiennest van een piratenschip zit. Het schip vaart met een gestadige, grote en constante snelheid over het zee-oppervlak dat geen enkele rimpeling vertoont. Golven zijn er niet\footnote{Ook hier zou je kunnen opperen dat een zee zonder golven niet echt een zee is.}. Stel je ook voor dat je een nogal zware kogel naar je uitkijkpost hebt meegenomen\footnote{Tja, in een gedachte-experiment zoals dit is veel mogelijk.}. Als je nu deze kogel laat vallen, met zicht op het achtersteven van het schip, dan \ldots dan valt hij natuurlijk regelrecht naar beneden op het hoofd van de kapitein die aan de voet van de mast staat en waarvoor me het arsenaal bijvoeglijke naamwoorden om zijn onuitstaanbaarheid te kunnen uitdrukken, even ontbreekt. Stel je nu ook voor dat zogezegd door de snelheid van het schip de kogel \emph{achter} het schip zou terechtkomen\footnote{Jawel, er zijn er onder ons die zich dat voorstellen} \ldots, dan zouden in een snel rijdende trein de valiezen die je op het rek legt zich met een enorme snelheid naar de achterkant van de wagon begeven, de kaarten die je wilt afleggen eveneens dezelfde plaats opzoeken i.p.v. netjes op de  aflegstapel te blijven liggen en dan zou de dame van de koffiebar enig kuiswerk hebben met de koffie die een ware ravage zou aanrichten \ldots 
-	\begin{figure}[h]
-	\centering
+	\begin{image}
+	
 	\includegraphics[height=2.3cm]{galileo_projectiles1} 
 	\includegraphics[height=2.3cm]{galileo_projectiles2} 
-	\caption{Dezelfde beweging van een kogel gezien door een waarnemer op het schip en een waarnemer buiten het schip.}
-	\end{figure}
+	\end{image}
+	\captionof{figure}{Dezelfde beweging van een kogel gezien door een waarnemer op het schip en een waarnemer buiten het schip.}
+	
 	Conclusie? Wel, de conclusie is enerzijds dat door de traagheid de kogel tijdens de val zijn snelheid vooruit, volgens de beweging van het schip, behoudt en recht op de kapitein terechtkomt en anderzijds dat de tijd die de kogel nodig heeft om in het luchtledige op de grond terecht te komen, onafhankelijk is van de snelheid die de kogel al dan niet meekrijgt in horizontale richting. De beweging van de kogel is immers voor iemand op het schip een verticale valbeweging en voor een buitenstaander een horizontale worp. Maar in beide gevallen gaat het om dezelfde beweging en dus ook over dezelfde benodigde tijd.\footnote{Mooie animatie: \url{http://www.pbs.org/wgbh/nova/galileo/expe_flash_2.html}}
 	
 	
